# OpenCL-mnist

./: .gitattributes  .gitignore  BUGFIX.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: infer_engine.hpp  main.cpp  mnist_infer.cpp  mnist_numpy_mlp.py  opencl_utils.hpp  web_server.cpp
src/kernels/: A.cl  B.cl
src/model_out/: linear0_W.txt  linear0_b.txt  linear1_W.txt  linear1_b.txt  linear2_W.txt  linear2_b.txt  model_meta.txt
src/web/: index.html
